# jottty

./: CLA.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: cla.yml  tests.yml
notes/: api.md  db.md  tasks.md
notes/db/: version-0.1.0.md
src/: cli.rs  config.rs  date.rs  main.rs  transact.rs
src/db/: datom.rs  mod.rs  transit.rs
