[package]
name = "jottty"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"
chrono = "0.4"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "*"
